2009-11-18  Chris Toshok  <toshok@ximian.com>

	* Deployment.cs (LoadAssemblies): we need to convert from source
	to absolute uris when dealing with ExtensionParts as well as
	AssemblyParts.
	(AssemblyGetResponse): if we fail to load the assembly, assume
	it's a zip file and try getting the first file out of it.  if
	that's an assembly, proceed as normal.

2009-11-11  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* Application.cs: New events for a11y.
	r:toshok

2009-11-09  Chris Toshok  <toshok@ximian.com>

	* FrameworkElement.cs (GetBindingExpression): naively implement
	this 3.0 method.

	r: spouliot

2009-11-09  Chris Toshok  <toshok@ximian.com>

	* UIElement.cs: add the static key event and mouse button event
	fields and partially implement AddEventHandler method.

	* FrameworkElement.cs: remove the LoadedEvent field, as it's
	generated now.

	* RoutedEvent.cs (ctor): pass the eventid so we can later retried
	it in UIElement.AddEventHandler.
	
	* Events.g.cs: regen.

	r: rolf

2009-11-08  Chris Toshok  <toshok@ximian.com>

	* Icon.cs, IconCollection.cs, WindowSettings.cs: new files.

	* OutOfBrowserSettings.cs: remove the static ctor.

	r: lewing

2009-11-06  Chris Toshok  <toshok@ximian.com>

	* FrameworkElement.cs (Initialize) add our loaded_hook.
	(InvokeLoaded): InvokeLoaded no longer takes event args since it
	doesn't emit the event.

2009-11-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* DependencyObject.cs: Add null-check in DepObjectFindName so
	every caller (anything that inherits from FrameworkElement and
	Inline) get the validation.
	* FrameworkElement.cs: Remove null-check from FindName, it's now
	part of DependencyObject.DepObjectFindName job to validate.

	r: alan

2009-11-06  Sebastien Pouliot  <sebastien@ximian.com>

	* DependencyObject.cs: Add null-check in RegisterEvent (a null 
	value would cause bad side effects). Reduce UnregisterAllEvents
	visibility.
	* Deployment.cs: Reduce ExtractXap and ReadManifest visibility.