@@ -1,3 +1,7 @@
+2009-11-18  Andreia Gaita  <avidigal@novell.com>
+
+	* System.Windows.auto.ssc: regen
+
 2009-11-10  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* System.Windows.auto.sc: Update moon_window_gtk_new signature
