@@ -1,3 +1,12 @@
+2009-11-18  Andreia Gaita  <avidigal@novell.com>
+
+	* Application.cs: reset the free_mapping flag so it doesn't get
+	freed twice. make Free internal so Deployment can free it when
+	replacing the current app.
+
+	* Deployment.cs: (SetCurrentApplication) Free the current
+	application if it's set when replacing it
+
 2009-11-18  Chris Toshok  <toshok@ximian.com>
 
 	* Deployment.cs (LoadAssemblies): we need to convert from source
